--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -22,6 +22,12 @@
 			background-color: white;
 			padding: 1rem 2rem;
 			font-size: 16px;
+			transition: 100ms;
+
+			&.open {
+				border: 2px solid blue;
+				box-shadow: 0 0 5px 5px rgba(0,0,255,0.2);
+			}
 		}
 		.expandable {
 			position: absolute;
@@ -30,19 +36,41 @@
 			right: 0;
 			background-color: white;
 			box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
-			max-height: 300px;
 			border-radius: 16px;
 			padding: 1rem;
-			overflow: auto;
+
+
+			ul {
+
+				overflow: auto;
+				max-height: 300px;
+
+
+			}
+
 
 			li {
+				@include d-flex(row, space-between, center);
+				margin: 0.5rem 0;
 				color: #000000;
 				padding: 0.5rem 1rem;
 				cursor: pointer;
 				border-radius: 8px;
 
 				&:hover {
-					background-color: rgba(157, 197, 248, 0.21);
+					background-color: rgba(157, 197, 248, 0.2);
+
+				}
+
+				&.selected {
+					color: blue;
+					background-color: rgba(157, 197, 248, 0.5);
+
+				}
+
+				.contents {
+					@include d-flex(row, start, center);
+					gap:4px;
 				}
 			}
 		}
