--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -16,6 +16,7 @@
 		margin: 1rem 0;
 
 		.selected-item {
+			@include d-flex(row, space-between, center);
 			@include input-border;
 			width: 100%;
 			height: 52px;
@@ -24,9 +25,17 @@
 			font-size: 16px;
 			transition: 100ms;
 
+			svg {
+				transition: 100ms;
+			}
+
 			&.open {
 				border: 2px solid blue;
-				box-shadow: 0 0 5px 5px rgba(0,0,255,0.2);
+				box-shadow: 0 0 5px 5px rgba(0, 0, 255, 0.2);
+
+				svg {
+					rotate: 180deg;
+				}
 			}
 		}
 		.expandable {
@@ -39,15 +48,10 @@
 			border-radius: 16px;
 			padding: 1rem;
 
-
 			ul {
-
 				overflow: auto;
 				max-height: 300px;
-
-
 			}
-
 
 			li {
 				@include d-flex(row, space-between, center);
@@ -59,18 +63,16 @@
 
 				&:hover {
 					background-color: rgba(157, 197, 248, 0.2);
-
 				}
 
 				&.selected {
 					color: blue;
 					background-color: rgba(157, 197, 248, 0.5);
-
 				}
 
 				.contents {
 					@include d-flex(row, start, center);
-					gap:4px;
+					gap: 4px;
 				}
 			}
 		}
